# vcpkg-lib-example

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt  test_build.bat  vcpkg.json
cmake/: vcpkg-lib-example-config.cmake.in
include/vcpkg-lib-example/: core.hpp
src/: example.cpp
tests/: CMakeLists.txt  test_main.cpp
